--- a/app/components/search/navigation.hbs
+++ b/app/components/search/navigation.hbs
@@ -17,7 +17,7 @@
     </li>
     <li class="au-c-list-navigation__item">
       <AuNavigationLink @route="search.documents">
-        {{t "documents"}}
+        {{t "document"}}
       </AuNavigationLink>
     </li>
   </ul>
