fix: adapt test to new default sorting

--- a/app/components/search/results-header.hbs
+++ b/app/components/search/results-header.hbs
@@ -13,6 +13,7 @@
       {{t "sort-by"}}
     </AuLabel>
     <select
+      data-test-results-header-type
       name="sort-type"
       id="sort-type"
       class="auk-select auk-select--block"
