fix tests on search

--- a/app/components/search/navigation.hbs
+++ b/app/components/search/navigation.hbs
@@ -1,9 +1,7 @@
 <div>
-  <AuHeading
-    @level="3"
-    @skin="6"
-    class="au-u-hidden-visually"
-  >Inhoud</AuHeading>
+  <AuHeading @level="3" @skin="6" class="au-u-hidden-visually">
+    {{t "content"}}
+  </AuHeading>
   <ul class="au-c-list-navigation">
     <li class="au-c-list-navigation__item">
       <AuNavigationLink @route="search.cases">
