--- a/app/components/search/date-range-filter.hbs
+++ b/app/components/search/date-range-filter.hbs
@@ -1,5 +1,5 @@
 <div class="au-c-card au-o-box au-o-box--small">
-  <div class="auk-form-group auk-u-position-relative au-u-margin-bottom-small">
+  <div class="auk-form-group auk-u-position-relative au-u-margin-bottom-small" data-test-route-search-date-from>
     <Auk::Label>{{t "from"}}</Auk::Label>
     <Auk::Datepicker
       @date={{@dateFrom}}
@@ -8,7 +8,7 @@
       @onClear={{@onDateFromClear}}
     />
   </div>
-  <div class="auk-form-group auk-u-position-relative">
+  <div class="auk-form-group auk-u-position-relative" data-test-route-search-date-to>
     <Auk::Label>{{t "until-inclusive"}}</Auk::Label>
     <Auk::Datepicker
       @date={{@dateTo}}
