KAS-3864 Update rdfa-editor related code

--- a/app/components/web-components/vl-rdfa-editor.hbs
+++ b/app/components/web-components/vl-rdfa-editor.hbs
@@ -1,9 +1,10 @@
 <div ...attributes>
   {{#if this.browserIsSupported}}
     <Rdfa::RdfaEditor
-      @class="rdfa-editor"
+      @schema={{this.schema}}
+      @widgets={{this.widgets}}
+      @plugins={{this.plugins}}
       @rdfaEditorInit={{@handleRdfaEditorInit}}
-      @profile="default"
       @editorOptions={{hash
         showToggleRdfaAnnotations=null
         showInsertButton=null
