--- a/app/components/signature-pill.hbs
+++ b/app/components/signature-pill.hbs
@@ -21,50 +21,18 @@
         @icon="sign"
         @skin="ongoing"
         @onClickAction={{this.openEditMode}}
-        @actionIcon="pencil"  
+        @actionIcon="remove"  
       >
         Te handtekenen
       </AuPill>
     {{else}}
-      <div class="auk-o-flex auk-o-flex--vertical-center">
-        <div class="auk-u-maximize-width">
-          <select
-            name="signature"
-            id="signature"
-            class="auk-select auk-select--block"
-          >
-            <option
-              value="no"
-            >
-              Geen handtekening
-            </option>
-            <option
-              value="yes"
-              selected="selected"
-            >
-              Te handtekenen
-            </option>
-          </select>
-        </div>
-        <AuButton
-          @skin="naked"
-          @icon="check"
-          @hideText={{true}}
-          {{on "click" (perform this.confirmChangeSignatureLevel)}}
-          class="auk-o-flex__item--fix auk-u-ml"
-        >
-          {{t "save"}}
-        </AuButton>
-        <AuButton
-          @skin="naked"
-          @icon="x"
-          @hideText={{true}}
-          {{on "click" (perform this.cancelChangeSignatureLevel)}}
-          class="auk-o-flex__item--fix"
-        >
-          {{t "cancel"}}
-        </AuButton>
-      </div>
+      <AuPill
+        @actionIcon="add"
+        @skin="border"
+        @onClickAction={{this.closeEditMode}}
+      >
+        Zet in handtekenmap
+      </AuPill>
     {{/if}}
   {{/if}}
 {{/if}}
