update signing flow

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -82,4 +82,5 @@
 // PROTOTYPE
 @import 'prototype/search';
 @import 'prototype/agenda';
+@import 'prototype/signatures';
 @import 'prototype/newsletters';
