feat: let hierarchical back button work as history back button in agenda
This is only the case if no route argument is passed in, which is
currently only the case in the agenda view.

--- a/app/components/agenda/agenda-header/agenda-tabs.hbs
+++ b/app/components/agenda/agenda-header/agenda-tabs.hbs
@@ -1,5 +1,5 @@
 <Auk::Tabs data-test-agenda-nav-tabs @reversed={{true}}>
-  <Auk::Tab @route="agendas" @isHierarchicalBack={{true}} />
+  <Auk::Tab @isHierarchicalBack={{true}} />
   <Auk::Tab
     @route="agenda.agendaitems.index"
     @query={{if
