--- a/app/templates/cases/index.hbs
+++ b/app/templates/cases/index.hbs
@@ -12,10 +12,10 @@
             >
               {{t "show-archived"}}
             </Auk::Label>
-            <Auk::Toggle
+            <AuToggleSwitch
               data-test-route-cases-overview-show-archived
-              id="show-cases-archived"
               @checked={{this.showArchived}}
+              id="show-cases-archived"
             />
           </Auk::Toolbar::Item>
         {{/if}}
