--- a/app/components/subcase/subcase-titles-panel/subcase-titles-panel-edit.hbs
+++ b/app/components/subcase/subcase-titles-panel/subcase-titles-panel-edit.hbs
@@ -3,10 +3,10 @@
     <div class="auk-u-mb-4">
       <div class="auk-form-group">
         <Auk::Label for="subcase-confidential">{{t "limited-access"}}</Auk::Label>
-        <Auk::Toggle
-          id="subcase-confidential"
-          @checked={{@subcase.confidential}}
+        <AuToggleSwitch
           data-test-subcase-titles-edit-confidential={{true}}
+          @checked={{@subcase.confidential}}
+          id="subcase-confidential"
         />
       </div>
     </div>
