cases result card shows related agenda items

--- a/app/templates/search/cases.hbs
+++ b/app/templates/search/cases.hbs
@@ -52,6 +52,7 @@
             @title={{row.title}}
             @caseId={{row.id}}
             @isArchived={{row.isArchived}}
+            @agendaItems={{row.agendaItems}}
           />
         </td>
       </:body>
