fix signing flow

--- a/app/components/signatures/signatures-add-cc.hbs
+++ b/app/components/signatures/signatures-add-cc.hbs
@@ -3,8 +3,8 @@
   <Auk::Modal::Body>
     <div class="auk-form-group">
       <Auk::Label>E-mail adres</Auk::Label>
-      <Auk::Input
-        @block={{true}}
+      <AuInput
+        @width="block"
       />
     </div>
   </Auk::Modal::Body>
