KAS-3789 rename permission to more specific and add comments

--- a/app/templates/search/cases.hbs
+++ b/app/templates/search/cases.hbs
@@ -24,7 +24,7 @@
       </Auk::RadioList>
     </div>
   {{/if}}
-  {{#if (user-may "view-confidential-cases")}}
+  {{#if (user-may "search-confidential-cases")}}
     <div class="au-c-card au-o-box au-o-box--small">
       <Auk::Label>{{t "confidential"}}</Auk::Label>
       <AuControlCheckbox
