KAS-3789 revert toggle archive and made it toggle only archived instead of showing both

--- a/app/templates/cases/index.hbs
+++ b/app/templates/cases/index.hbs
@@ -2,6 +2,25 @@
 <Cases::CasesHeader @didCreateNewCase={{this.navigateToDecisionmakingFlow}} />
 <div class="auk-scroll-wrapper__body">
   <div class="auk-u-m-8">
+    <Auk::Toolbar>
+      <Auk::Toolbar::Group @position="right">
+        {{#if (user-may "manage-cases")}}
+          <Auk::Toolbar::Item class="auk-o-flex auk-o-flex--vertical-center">
+            <Auk::Label
+              class="auk-u-text-nowrap auk-u-mr-2 auk-u-p-0"
+              for="show-cases-archived-only"
+            >
+              {{t "show-archived-only"}}
+            </Auk::Label>
+            <Auk::Toggle
+              data-test-route-cases-overview-show-archived
+              id="show-cases-archived-only"
+              @checked={{this.showArchivedOnly}}
+            />
+          </Auk::Toolbar::Item>
+        {{/if}}
+      </Auk::Toolbar::Group>
+    </Auk::Toolbar>
     <KDataTable
       data-test-route-cases-overview-data-table
       @hoverable={{true}}
