fix: ensure the hierarchical back tab is always active
Previously the hierarchical back buttons always were a LinkTo component
with a route parameter that linked to a parent route. Because of this,
they were always considered active (because a parent route is always an
active route). Some tests relied on this button being active, so we
ensure it's always active even when not passing a route (and making the
button behave like a history back button).

--- a/app/components/auk/tab.hbs
+++ b/app/components/auk/tab.hbs
@@ -39,9 +39,10 @@
   </LinkTo>
 {{else if @isHierarchicalBack}}
   <li
-    class="auk-tabs__tab
-      {{if @isHierarchicalBack "auk-tabs__hierarchical-back"}}
-      {{if @active "auk-tabs__tab--active"}}"
+    class="auk-tabs__tab auk-tabs__hierarchical-back auk-tabs__tab--active"
+    {{!-- Here the tab always has the active class because that's how it would
+          behave if passed in a @route to the parent route, because the parent
+          route is always active --}}
   >
     {{!-- template-lint-disable link-href-attributes no-invalid-interactive --}}
     <a
